/*
 * Licensed to the Apache Software Foundation (ASF) under one or more contributor license
 * agreements. See the NOTICE file distributed with this work for additional information regarding
 * copyright ownership. The ASF licenses this file to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance with the License. You may obtain a
 * copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software distributed under the License
 * is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
 * or implied. See the License for the specific language governing permissions and limitations under
 * the License.
 */

syntax = "proto3";
package org.apache.geode.protocol.protobuf;

import "basicTypes.proto";

message PutRequest {
    string regionName = 1;
    Entry entry = 2;
}

message PutResponse {
    bool success = 1;
}

message GetRequest {
    string regionName = 1;
    EncodedValue key = 2;
}

message GetResponse {
    EncodedValue result = 1;
}

message PutManyRequest {
    string regionName = 1;
    int32 numberOfEntries = 2;
    repeated Entry entry = 3;
}

message PutManyResponse {
    int32 numberOfKeysFailed = 1;
    repeated EncodedValue key = 2;
}

message GetManyRequest {
    string regionName = 1;
    int32 numberOfKeys = 2;
    repeated EncodedValue key = 3;
    EncodedValue callbackArg = 4;
}

message GetManyResponse {
    int32 numberOfEntries = 1;
    repeated Entry entries = 2;
}

message GetRegionsRequest {

}

message GetRegionsResponse {
    int32 numberOfRegions = 1;
    repeated Region regions = 2;
}

message ListKeysRequest {
    string regionName = 1;
}

message ListKeysResponse {
    int32 numberOfKeys = 1;
    repeated EncodedValue key = 2;
}

message RemoveRequest {
    string regionName = 1;
    EncodedValue key = 2;
}

message RemoveResponse {
    bool success = 1;
}

message RemoveManyRequest {
    string regionName = 1;
    repeated EncodedValue key = 2;
}

message RemoveManyResponse {
    bool success = 1;
}

message RemoveAllRequest {
    string regionName = 1;
}

message RemoveAllResponse {
    bool success = 1;
}

message CreateRegionRequest {
    string regionName = 1;
}

message CreateRegionResponse {
    bool success = 1;
}

message DestroyRegionRequest {
    string regionName = 1;
}

message DestroyRegionResponse {
    bool success = 1;
}
